# seve-framework

./: .env.template  .gitignore  ANALISE_ESTRATEGICA_MERCADO.md  ANONYMOUS_POSITIONING_STRATEGY.md  AUDITORIA_COMPLETA_SEVE_FRAMEWORK.md  BLOCKCHAIN_PROTOCOL_STRATEGY.md  CHANGELOG.md  CHECKLIST_ACOES_IMEDIATAS.md  CHECKLIST_PUBLICACAO_HF.md  CITATION.cff  CLEAN_REPOSITORY.md  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  COST_ANALYSIS.md  Dockerfile  EXECUTION_PLAN.md  EXECUTIVE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  INTERNAL_ARCHITECTURE_MAP.md  LAUNCH_STRATEGY.md  LICENSE  MARKETING_PLAN.md  PLANO_LAPIDACAO_FINAL.md  QUICKSTART.md  README.md  RELATORIO_EXECUCAO_AUDITORIA.md  RELATORIO_IMPLEMENTACAO_CORE.md  REPOSITORY_STRUCTURE.md  SEVE_FRAMEWORK_ANALYSIS.md  SUMARIO_EXECUTIVO_AUDITORIA.md  analyze_framework.py  automated_deployment.py  commit_docs.ps1  commit_docs.sh  deploy_blockchain.py  docsync.yaml  execute_commits.bat  (+22 more)
.github/workflows/: pages.yml  tests.yml
Desktop/PROJETOS/05_PLATFORMS/sage_x_rust_module/: BLUEPRINT.md  Cargo.toml
Desktop/PROJETOS/05_PLATFORMS/sage_x_rust_module/src/: lib.rs  main.rs  models.rs  sync.rs
SEVE-FRAMEWORK/: DOCSYNC_SETUP.md  docsync.yaml
SEVE-FRAMEWORK/docs/: AVALIACAO_FINAL_FRAMEWORK.md  EXPLICACAO_ARQUIVOS_DELETADOS.md  RESTAURACAO_COMPLETA_ARQUIVOS.md  RESUMO_ANALISE_FINAL.md
SEVE-FRAMEWORK/scripts/: fix_markdownlint.py  organize_with_docsync.py
_ARCHIVE/legacy_repo_content/guardflow_code/SEVE-UNIVERSAL/: README.md  README_v3.md  pyproject.toml
_ARCHIVE/legacy_repo_content/guardflow_code/SEVE-UNIVERSAL/_git_legacy/: COMMIT_EDITMSG  index
_ARCHIVE/legacy_repo_content/guardflow_code/SEVE-UNIVERSAL/_git_legacy/refs/heads/: main
_ARCHIVE/legacy_repo_content/guardflow_code/SEVE-UNIVERSAL/examples/: integrated_ethics_empathy_example.py  retail_domain_example.py  universal_domain_adaptation.py
_ARCHIVE/legacy_repo_content/guardflow_code/SEVE-UNIVERSAL/src/seve_universal/: core.py  empathy.py  ethics.py  v3_integration.py
_ARCHIVE/recursive_clone_backup/: .gitignore
_ARCHIVE/src_seve_v1_legacy/: core.py  ethics.py
config/: anonymous.yaml  anonymous_metrics.json  anonymous_presence.json  anonymous_workflow.json  default.yaml  environment.yaml  user.yaml
content/: anonymous_press.json  anonymous_readme.json
data/: .gitkeep
deployments/: hardhat_deployments.json
docs/: AGUARDANDO_MATIC.md  ANALISE_CONTEUDO_SITE.md  ANALISE_CONVERTER_MATIC_ETH.md  ANALISE_CUSTO_MAINNET.md  ANALISE_ERRO_MERMAID.md  ANALISE_ESTRATEGIA_APRESENTACAO.md  ANALISE_ESTRATEGICA_DEPLOY.md  ANALISE_FINAL_DOCUMENTACAO.md  ANALISE_META_ALCANCADA.md  ANALISE_PROPOSTA_PATENTE.md  ANALISE_SEGMENTACAO_AUDIENCIA.md  ANALISE_UI_UX_FINAL_DESIGNER.md  ANALISE_VIABILIDADE_PATENTE.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  ARQUITETURA_ECOSSISTEMA_SEVE.md  ATIVACAO_MONETIZACAO_CONCLUIDA.md  AVALIACAO_COMPLETA_SHOWCASE.md  BEST_PRACTICES.md  BRIDGE_MATIC_POLYGON.md  BRIDGE_RAPIDO_MATIC.md  CERTIFICACAO_FINAL_FRAMEWORK.md  CHECKLIST_DOMINIO_CONFIGURADO.md  CLI_GUIDE.md  COMO_EXPORTAR_CHAVE_METAMASK.md  CONFIGURACAO_VERCEL.md  CONSOLIDATION_REPORT.md  CORRECAO_FINAL_MERMAID.md  CUSTO_REAL_HUGGING_FACE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_TERMINAL.md  DEVELOPMENT_COST_ANALYSIS.md  DIAGNOSTICO_MATIC.md  DIFERENCA_ENDERECO_VS_CHAVE.md  DIFERENCA_SRP_VS_PRIVATE_KEY.md  DOCSYNC_EXECUTION_REPORT.md  DOCUMENTATION_STATUS_FINAL.md  ENV_SETUP.md  ESTRATEGIA_FUNDACAO_IA_ETICA.md  (+95 more)
docs/adr/: ADR-001-pyorch-vs-tensorflow.md  ADR-002-openzeppelin-security.md  ADR-003-no-facial-recognition.md  ADR-004-modular-architecture.md  ADR-005-sid-integration.md  ADR-006-blockchain-integration.md  ADR-007-fastapi-vs-flask-django.md  ADR-008-universal-integration.md  README.md
docs/api/: README.md
docs/archives/: DESENVOLVIMENTO_SEVE_UNIVERSAL_V1.md  RESUMO_FINAL_DOCUMENTOS_ADAPTADOS.md
docs/artigos/: SEVE_FRAMEWORK_EMPATHY_COMPUTING_PAPER.md  SEVE_FRAMEWORK_ETHICAL_COMPLIANCE_PAPER.md  SEVE_FRAMEWORK_TECHNICAL_PAPER.md
docs/assets/: architecture_animated.html
docs/executive/: EXECUTIVE_SUMMARY.md
docs/governance/: EAP_SEVE_UNIVERSAL_V1.md
docs/integration/: INTEGRATION_GUIDE.md
docs/legacy_guardflow/: SEVE_UNIVERSAL_DOCUMENTATION.md
docs/patentes/: GUIA_GERACAO_FIGURAS.md  README_PATENTES.md  RESUMO_EXECUTIVO_PATENTES.md
docs/performance/: BENCHMARKS.md
docs/pitch/: ONE_PAGER.md  PITCH_DECK.md
docs/technical/: INDEX.md
docs/templates/: adr_template.md  api_template.md  faq_template.md  integration_template.md  module_template.md  troubleshooting_template.md  tutorial_template.md
examples/: healthcare_demo.py  retail_demo.py  universal_education.py  universal_healthcare.py
hf_upload/: .gitignore  LICENSE_Symbeon_Vault.md  README.md  pyproject.toml
hf_upload/examples/: basic_usage.py  quickstart.py  universal_retail.py
hf_upload/src/seve/: __init__.py  link.py  sense.py
hf_upload/src/seve_framework/: __init__.py  config.py  link.py  monitoring.py  sense.py
hf_upload/src/seve_framework/universal/: adapters.py  core.py  empathy.py  ethics.py
scripts/: add-version-v1.js  bridge-matic-to-polygon.js  bridge-simple.js  bridge-socket-api.js  bridge-via-api.js  check-balance-mainnet.js  check-balance.js  check-matic-multiple-rpcs.js  create-dao-proposal.js  deploy-dao.js  deploy-pages.ps1  deploy-pages.sh  deploy-polygon-complete.ps1  deploy-polygon-complete.sh  deploy-polygon.ps1  deploy-polygon.sh  deploy-protocol.js  deploy-testnet.ps1  deploy-testnet.sh  deploy-token.js  diagnose_imports.py  fix-markdown-lint.py  get-free-matic.js  prepare_huggingface.py  register-first-agent.js  test-sepolia-contracts.js  update-private-key.ps1  verify-ready-polygon.js  verify_e2e_flow.py
showcase/: README.md  index.html
test/: SEVEToken.test.js  test_sepolia_contracts.js
tests/: conftest.py  test_basic.py  test_comprehensive.py  test_hybrid_integration.py  test_sanity.py  test_universal_adapters.py  test_universal_core.py  test_universal_empathy.py  test_universal_ethics.py
(+134 files in other folders)
