[package]
name = "sage_x_rust_module"
version = "0.1.0"
edition = "2021"

[lib]
name = "warp_rules_client"
path = "src/lib.rs"

[[bin]]
name = "sage_x_rust_module"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full", "rt", "macros", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
jsonwebtoken = "8.0"
sha2 = "0.10"
base64 = "0.13"

# Environmental configuration
dotenv = "0.15"
